--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   widgets_to_image: ^0.0.2
   image_gallery_saver: ^2.0.3
   image_picker:
+  permission_handler:
 
 
 dev_dependencies:
